# erpnext-fastapi

./: .gitignore  README.md  auth_utils.py  config.py  cookies.txt  database.py  main.py  pyproject.toml  requirements.txt
models/: erp_schemas.py  issue.py
routes/: __init__.py  auth.py  erp_metadata.py  health.py  issues.py
services/: erp_service.py  mongo_service.py  sync_service.py
utils/: network.py
